Ajustes para despliegue